--- a/Kontroller/config/config.json
+++ b/Kontroller/config/config.json
@@ -1,7 +1,7 @@
 {
-    "host":"192.168.1.5",
-    "port":"4444",
-    "botToken":"6586934055:AAFWqyxgPJILPoPzAlko1B06kK-VeopAdW8",
-    "chatID":"5184312477",
-    "max_connections":"2"
+    "host":"",
+    "port":"",
+    "botToken":"",
+    "chatID":"",
+    "max_connections":"1"
 }
